--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p id=text>Time until</p>
     </div>
     <div>
-        <img id="pic" src= "/resources/besos.gif">
+        <img id="pic" src= "https://media.giphy.com/media/9AIzFvMX8cfRJBUzWc/giphy.gif">
     </div>
     <div id="timer">
     </div>
