--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <p id=text>Time until</p>
     </div>
     <div>
-        <img id="pic" src= "https://media.giphy.com/media/9AIzFvMX8cfRJBUzWc/giphy.gif">
+        <img class="pic" src= "https://media.giphy.com/media/9AIzFvMX8cfRJBUzWc/giphy.gif">
+        <img class="pic" src= "./resources/besos.gif">
+        <img class="pic" src="./resources/pinchyNipy.gif" alt="">
+        <img class="pic" src="./resources/mooo.jpg" alt="">
     </div>
     <div id="timer">
     </div>
